RESOLVED FIXED107259
[Gtk] Dispatching event list into input element.
https://bugs.webkit.org/show_bug.cgi?id=107259
Summary [Gtk] Dispatching event list into input element.
Oleg Smirnov
Reported 2013-01-18 04:32:00 PST
Description: Webkit dispatch event list into imput element via "action" tag. Steps to Reproduce: 1) load to Midori attached test case. 2) press "Enter". 3) press "Down" for moving focus to input element. 4) press 'a' letter to input box. Actual Results: Action for current input will be executed. Page will be redirected to google.com. Expected Results: No any executable actions. Build Date & Platform: 18.01.2013 Ubuntu 12.04 Additional Information: This issue can be reproduced on Gtk based browsers only (GtkLauncher, Midori and etc.)
Attachments
Dispatch event test-case. (944 bytes, text/html)
2013-01-18 04:34 PST, Oleg Smirnov
no flags
Patch (1.34 KB, patch)
2013-01-18 05:14 PST, Oleg Smirnov
no flags
Oleg Smirnov
Comment 1 2013-01-18 04:34:26 PST
Created attachment 183425 [details] Dispatch event test-case.
Oleg Smirnov
Comment 2 2013-01-18 05:14:17 PST
WebKit Review Bot
Comment 3 2013-01-21 08:16:01 PST
Comment on attachment 183427 [details] Patch Clearing flags on attachment: 183427 Committed r140336: <http://trac.webkit.org/changeset/140336>
WebKit Review Bot
Comment 4 2013-01-21 08:16:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.