[Gtk] Dispatching event list into input element. https://bugs.webkit.org/show_bug.cgi?id=107259

Patch by Oleg Smirnov <oleg.smirnov@lge.com> on 2013-01-21
Reviewed by Martin Robinson.

Clear pending command list after dispatching events.

* WebCoreSupport/EditorClientGtk.cpp:
(WebKit::EditorClient::handleKeyboardEvent):

Canonical link: https://commits.webkit.org/125689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140336 268f45cc-cd09-0410-ab3c-d52691b4dbfc